<resources>
    <string name="app_name">PiglioTech</string>
    <string name="book_image">Book Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name:</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="avatar_url_hint">Avatar URL:</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="north_west">North West</string>
    <string name="north_east">North East</string>
    <string name="select_region">Select Region</string>
    <string name="yorkshire_humber">Yorkshire Humber</string>
    <string name="west_midlands">West Midlands</string>
    <string name="east_midlands">East Midlands</string>
    <string name="east_anglia">East Anglia</string>
    <string name="london">London</string>
    <string name="south_east">South East</string>
    <string name="south_west">South West</string>
    <string name="swap_text">Would like to swap:</string>
    <string name="for_text_view">For:</string>
    <string name="exchange">Exchange</string>
    <string name="something_n_went_wrong">Something \n Went Wrong.</string>
    <string name="try_again">Try again</string>
    <string name="sign_out_btn_text">Sign Out</string>
    <string name="profile_picture_content_description">Your profile picture</string>
    <string name="pfp_image">pfp_image</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="isbn">ISBN:</string>
    <string name="submit">Submit</string>
    <string name="add_a_book_to_your_library">Add a Book \nto Your Library</string>
    <string name="libraries_near_you">Libraries \n Near You</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm</string>
    <string name="not_already_a_user">Not already a user?</string>
    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Log in</string>


    <string-array name="regions">
        <item>@string/select_region</item>
        <item>@string/north_west</item>
        <item>@string/north_east</item>
        <item>@string/yorkshire_humber</item>
        <item>@string/west_midlands</item>
        <item>@string/east_midlands</item>
        <item>@string/east_anglia</item>
        <item>@string/london</item>
        <item>@string/south_east</item>
        <item>@string/south_west</item>
    </string-array>
</resources>