<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.signup.SignUpFragment"
    android:background="@drawable/landing_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="144dp"
            android:fontFamily="@font/lin_libertine_r"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lin_libertine_r"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                tools:layout_editor_absoluteX="28dp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            app:layout_constraintTop_toBottomOf="@+id/name_card"
            app:layout_constraintBottom_toTopOf="@id/password_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lin_libertine_r"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="28dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/password_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            app:layout_constraintTop_toBottomOf="@+id/email_card"
            app:layout_constraintBottom_toTopOf="@id/url_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lin_libertine_r"
                android:hint="@string/password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/url_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            app:layout_constraintTop_toBottomOf="@+id/password_card"
            app:layout_constraintBottom_toTopOf="@id/region_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lin_libertine_r"
                android:hint="@string/avatar_url_hint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:inputType="textUri"/>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/region_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            app:layout_constraintTop_toBottomOf="@id/url_card"
            app:layout_constraintBottom_toTopOf="@id/buttonConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="60dp"
            tools:layout_editor_absoluteX="50dp">

            <Spinner
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundTint="#3F51B5"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/lin_libertine_r"
            android:text="@string/confirm_button_text"
            android:textSize="28sp"
            app:backgroundTint="#3E6144"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="0.8dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:attr/progressBarStyleLarge"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>




<!--    &lt;!&ndash; Linear Layout with vertical orientation and other properties &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        xmlns:app="http:// schemas.android.com/apk/res-auto"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center_vertical"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp"-->
<!--        tools:context=".RegistrationActivity">-->

<!--        &lt;!&ndash; TextView for heading &ndash;&gt;-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Register" />-->

<!--        &lt;!&ndash; Edit text for email &ndash;&gt;-->
<!--        <EditText-->
<!--            android:id="@+id/email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Enter your Email" />-->

<!--        &lt;!&ndash; Edit text for password &ndash;&gt;-->
<!--        <EditText-->
<!--            android:id="@+id/passwd"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Enter your Password"-->
<!--            android:inputType="textPassword" />-->

<!--        &lt;!&ndash; Button for register with text "Register" &ndash;&gt;-->
<!--        <Button-->
<!--            android:id="@+id/btnregister"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Register" />-->

        <!-- ProgressBar for loading time -->

<!--    </LinearLayout>-->
</FrameLayout>
</layout>